--- a/report/thesis/references.bib
+++ b/report/thesis/references.bib
@@ -94,6 +94,36 @@
   keywords = {applied type system,ATS,dependent types,proof erasure,theorem proving}
 }
 
+@inproceedings{cousotAbstractInterpretationUnified1977,
+  title = {Abstract Interpretation: A Unified Lattice Model for Static Analysis of Programs by Construction or Approximation of Fixpoints},
+  shorttitle = {Abstract Interpretation},
+  booktitle = {Proceedings of the 4th {{ACM SIGACT-SIGPLAN}} Symposium on {{Principles}} of Programming Languages  - {{POPL}} '77},
+  author = {Cousot, Patrick and Cousot, Radhia},
+  year = {1977},
+  pages = {238--252},
+  publisher = {ACM Press},
+  address = {Los Angeles, California},
+  doi = {10.1145/512950.512973},
+  url = {http://portal.acm.org/citation.cfm?doid=512950.512973},
+  urldate = {2024-06-16},
+  langid = {english}
+}
+
+@inproceedings{cousotSystematicDesignProgram1979,
+  title = {Systematic Design of Program Analysis Frameworks},
+  booktitle = {Proceedings of the 6th {{ACM SIGACT-SIGPLAN}} Symposium on {{Principles}} of Programming Languages  - {{POPL}} '79},
+  author = {Cousot, Patrick and Cousot, Radhia},
+  year = {1979},
+  pages = {269--282},
+  publisher = {ACM Press},
+  address = {San Antonio, Texas},
+  doi = {10.1145/567752.567778},
+  url = {http://portal.acm.org/citation.cfm?doid=567752.567778},
+  urldate = {2024-06-16},
+  langid = {english},
+  file = {/Users/charlielidbury/Zotero/storage/NLEGAE2Y/Cousot and Cousot - 1979 - Systematic design of program analysis frameworks.pdf}
+}
+
 @misc{DijkstraHoareMonads,
   title = {Dijkstra and {{Hoare}} Monads in Monadic Computation - {{ScienceDirect}}},
   url = {https://www.sciencedirect.com/science/article/pii/S0304397515002364},
