--- a/report/thesis/includes.tex
+++ b/report/thesis/includes.tex
@@ -19,7 +19,8 @@
 %----------------------------------------------------------------------------------------
 \usepackage[a4paper,top=3cm,bottom=2cm,left=2cm,right=2cm,marginparwidth=1.75cm]{geometry}
 \usepackage{textpos}
-\usepackage[square]{natbib} % for bibliography
+\usepackage{natbib} % for bibliography
+% \usepackage[square]{natbib} % for bibliography
 \usepackage{tabularx,longtable,multirow,subfigure,caption}%hangcaption
 \usepackage{fncylab} %formatting of labels
 \usepackage{fancyhdr} % page layout
@@ -35,7 +36,7 @@
 \usepackage{backref} % needed for citations
 \usepackage{array}
 \usepackage{latexsym}
-\usepackage[pdftex,pagebackref,hypertexnames=false,colorlinks]{hyperref} % provide links in pdf
+\usepackage[pdftex,pagebackref,hypertexnames=false,colorlinks=true,allcolors=blue]{hyperref} % provide links in pdf
 \usepackage{amsfonts}
 \usepackage{booktabs}
 \usepackage{nth}
