--- a/report/thesis/references.bib
+++ b/report/thesis/references.bib
@@ -47,15 +47,6 @@
   publisher = {Springer}
 }
 
-@misc{AreWeStackefficient2022,
-  title = {Are We Stack-Efficient Yet?},
-  year = {2022},
-  month = nov,
-  url = {https://web.archive.org/web/20221128082216/https://arewestackefficientyet.com/},
-  urldate = {2024-06-08},
-  file = {/Users/charlielidbury/Zotero/storage/RF8IJXPZ/arewestackefficientyet.com.html}
-}
-
 @misc{ATSHome,
   title = {{{ATS-Home}}},
   url = {https://www.cs.bu.edu/~hwxi/atslangweb/Home.html},
@@ -68,12 +59,28 @@
   urldate = {2024-01-24}
 }
 
+@misc{BenchmarksGame,
+  title = {Benchmarks {{Game}}},
+  url = {https://benchmarksgame-team.pages.debian.net/benchmarksgame/fastest/rust-gpp.html},
+  urldate = {2024-06-08}
+}
+
 @inproceedings{bhargavan2017everest,
   title = {Everest: {{Towards}} a Verified, Drop-in Replacement of {{HTTPS}}},
   booktitle = {2nd Summit on Advances in Programming Languages ({{SNAPL}} 2017)},
   author = {Bhargavan, Karthikeyan and Bond, Barry and {Delignat-Lavaud}, Antoine and Fournet, C{\'e}dric and Hawblitzel, Chris and Hritcu, Catalin and Ishtiaq, Samin and Kohlweiss, Markulf and Leino, Rustan and Lorch, Jay and others},
   year = {2017},
   publisher = {Schloss Dagstuhl-Leibniz-Zentrum fuer Informatik}
+}
+
+@article{blanchetIntroductionAbstractInterpretation2002,
+  title = {Introduction to {{Abstract Interpretation}}},
+  author = {Blanchet, Bruno},
+  year = {2002},
+  url = {https://bblanche.gitlabpages.inria.fr/absint.pdf},
+  abstract = {We present the basic theory of abstract interpretation, and its application to static program analysis. The goal is not to give an exhaustive view of abstract interpretation, but to give enough background to make papers on abstract interpretation more understandable.},
+  langid = {english},
+  file = {/Users/charlielidbury/Zotero/storage/QPK7Q3E9/Blanchet - Introduction to Abstract Interpretation.pdf}
 }
 
 @inproceedings{chenCombiningProgrammingTheorem2005,
@@ -258,6 +265,16 @@
   langid = {english}
 }
 
+@article{kurtgodelUberFormalUnentscheidbare1931,
+  title = {{\"U}ber Formal Unentscheidbare {{S{\"a}tze}} Der {{Principia Mathematica}} Und Verwandter {{Systeme I}}},
+  author = {{Kurt G{\"o}del}},
+  year = {1931},
+  journal = {Monatshefte f{\"u}r Mathematik und Physik},
+  volume = {38},
+  number = {1},
+  pages = {173--198}
+}
+
 @phdthesis{lidburyOchreDependentlyTyped2024,
   type = {{{MEng Individual Project}}},
   title = {Ochre: {{A Dependently Typed Systems Programming Language}}},
@@ -300,6 +317,21 @@
   abstract = {A dependently-typed proof language intended to make provably correct bare metal code possible for working software engineers.},
   howpublished = {magmide},
   keywords = {coq,dependent-types,formal-methods,formal-verification,logic,systems-programming,type-safety,verification}
+}
+
+@misc{MemorySafety,
+  title = {Memory Safety},
+  url = {https://www.chromium.org/Home/chromium-security/memory-safety/},
+  urldate = {2024-06-16},
+  file = {/Users/charlielidbury/Zotero/storage/XBEV7QK7/memory-safety.html}
+}
+
+@article{morrisettCycloneSafeDialect,
+  title = {Cyclone: {{A}} Safe Dialect of {{C}}},
+  author = {Morrisett, Greg and Cheney, James and Grossman, Dan and Hicks, Michael and Wang, Yanling},
+  url = {https://homes.cs.washington.edu/~djg/papers/cyclone.pdf},
+  langid = {english},
+  file = {/Users/charlielidbury/Zotero/storage/S9GW9U4E/Morrisett et al. - Cyclone A safe dialect of C.pdf}
 }
 
 @inproceedings{nanevskiConsiderationPublicationFunctionala,
@@ -347,6 +379,14 @@
   file = {/Users/charlielidbury/Zotero/storage/NVWZ7PYB/Reinking et al. - 2021 - Perceus garbage free reference counting with reus.pdf}
 }
 
+@techreport{officeofthenationalcyberdirectorBackBuildingBlocks2024,
+  title = {Back to the {{Building Blocks}}: {{A Path Toward Secure}} and {{Measurable Software}}},
+  author = {{Office of the National Cyber Director}},
+  year = {2024},
+  institution = {The White House},
+  url = {https://www.whitehouse.gov/wp-content/uploads/2024/02/Final-ONCD-Technical-Report.pdf}
+}
+
 @article{pierre-evaristeTransportingFunctionsOrnaments2014,
   title = {Transporting {{Functions}} across {{Ornaments}}},
   author = {{Pierre-Evariste}, Dagand and Conor, McBride},
@@ -373,6 +413,13 @@
   url = {https://rust-lang.github.io/polonius/current_status.html},
   urldate = {2024-06-15},
   file = {/Users/charlielidbury/Zotero/storage/PZIB9JMN/current_status.html}
+}
+
+@misc{ProactiveApproachMore,
+  title = {A Proactive Approach to More Secure Code {\textbar} {{MSRC Blog}} {\textbar} {{Microsoft Security Response Center}}},
+  url = {https://msrc.microsoft.com/blog/2019/07/a-proactive-approach-to-more-secure-code/},
+  urldate = {2024-06-16},
+  file = {/Users/charlielidbury/Zotero/storage/U3UCIK74/a-proactive-approach-to-more-secure-code.html}
 }
 
 @article{protzenkoLowVerifiedLowLevel2017,
@@ -410,6 +457,14 @@
   file = {/Users/charlielidbury/Zotero/storage/XTDB5A83/Protzenko - 2014 - Mezzo a typed language for safe effectful concurr.pdf}
 }
 
+@article{ramananandroEverParseVerifiedSecure,
+  title = {{{EverParse}}: {{Verified Secure Zero-Copy Parsers}} for {{Authenticated Message Formats}}},
+  author = {Ramananandro, Tahina and {Delignat-Lavaud}, Antoine and Fournet, C{\'e}dric and Swamy, Nikhil and Chajed, Tej and Kobeissi, Nadim and Protzenko, Jonathan},
+  abstract = {We present EverParse, a framework for generating parsers and serializers from tag-length-value binary message format descriptions. The resulting code is verified to be safe (no overflow, no use after free), correct (parsing is the inverse of serialization) and non-malleable (each message has a unique binary representation). These guarantees underpin the security of cryptographic message authentication, and they enable testing to focus on interoperability and performance issues.},
+  langid = {english},
+  file = {/Users/charlielidbury/Zotero/storage/6TC95L57/Ramananandro et al. - EverParse Veriﬁed Secure Zero-Copy Parsers for Au.pdf}
+}
+
 @misc{rust-anecdote,
   author = {Hoare, Graydon},
   year = {2022},
@@ -417,29 +472,36 @@
   url = {https://twitter.com/graydon_pub/status/1492792051657629698}
 }
 
-@misc{RustProgrammingLanguage,
+@misc{RustProgrammingLanguage2015,
   title = {Rust {{Programming Language}}},
+  year = {2015},
   url = {https://www.rust-lang.org/},
   urldate = {2024-06-04}
 }
 
-@misc{RustProgrammingLanguagea,
-  title = {The {{Rust Programming Language}} - {{The Rust Programming Language}}},
-  url = {https://doc.rust-lang.org/book/title-page.html},
-  urldate = {2024-06-05},
-  file = {/Users/charlielidbury/Zotero/storage/W2X47UYA/title-page.html}
-}
-
-@misc{RustVsWhich,
-  title = {Rust~vs~{{C}}++ G++ - {{Which}} Programs Are Fastest? ({{Benchmarks Game}})},
-  url = {https://benchmarksgame-team.pages.debian.net/benchmarksgame/fastest/rust-gpp.html},
-  urldate = {2024-06-08}
+@misc{RustStackEfficiency2022,
+  title = {Rust {{Stack Efficiency}}},
+  year = {2022},
+  month = nov,
+  url = {https://web.archive.org/web/20221128082216/https://arewestackefficientyet.com/},
+  urldate = {2024-06-08},
+  file = {/Users/charlielidbury/Zotero/storage/RF8IJXPZ/arewestackefficientyet.com.html}
 }
 
 @misc{stackoverflow,
   title = {{{StackOverflow}} Developer Survey},
   year = {2021},
   url = {https://insights.stackoverflow.com/survey/2021}
+}
+
+@misc{StackOverflowDeveloper,
+  title = {Stack {{Overflow Developer Survey}} 2023},
+  journal = {Stack Overflow},
+  url = {https://survey.stackoverflow.co/2023/?utm_source=social-share&utm_medium=social&utm_campaign=dev-survey-2023},
+  urldate = {2024-06-16},
+  abstract = {In May 2023 over 90,000 developers responded to our annual survey about how they learn and level up, which tools they're using, and which ones they want.},
+  langid = {english},
+  file = {/Users/charlielidbury/Zotero/storage/98MU989K/2023.html}
 }
 
 @inproceedings{swamyVerifyingHigherorderPrograms2013a,
@@ -453,6 +515,23 @@
   abstract = {Modern programming languages, ranging from Haskell and ML, to JavaScript, C\# and Java, all make extensive use of higher-order state. This paper advocates a new verification methodology for higher-order stateful programs, based on a new monad of predicate transformers called the Dijkstra monad. Using the Dijkstra monad has a number of benefits. First, the monad [{\dots}]},
   langid = {american},
   file = {/Users/charlielidbury/Zotero/storage/E46BW5N8/Swamy et al. - 2013 - Verifying Higher-order Programs with the Dijkstra .pdf}
+}
+
+@article{taoDICEFormallyVerified,
+  title = {{{DICE}} : {{A Formally Verified Implementation}} of {{DICE Measured Boot}}},
+  author = {Tao, Zhe and Rastogi, Aseem and Gupta, Naman and Vaswani, Kapil and Thakur, Aditya V},
+  abstract = {Measured boot is an important class of boot protocols that ensure that each layer of firmware and software in a device's chain of trust is measured, and the measurements are reliably recorded for subsequent verification. This paper presents DICE , a formal specification as well as a formally verified implementation of DICE, an industry standard measured boot protocol. DICE is proved to be functionally correct, memorysafe, and resistant to timing- and cache-based side-channels. A key component of DICE is a verified certificate creation library for a fragment of X.509. We have integrated DICE into the boot firmware of an STM32H753ZI micro-controller. Our evaluation shows that using a fully verified implementation has minimal to no effect on the code size and boot time when compared to an existing unverified implementation.},
+  langid = {english},
+  file = {/Users/charlielidbury/Zotero/storage/8A9QNLR2/Tao et al. - DICE  A Formally Veriﬁed Implementation of DICE M.pdf}
+}
+
+@misc{TIOBEIndex,
+  title = {{{TIOBE Index}}},
+  journal = {TIOBE},
+  url = {https://www.tiobe.com/tiobe-index/},
+  urldate = {2024-06-16},
+  langid = {american},
+  file = {/Users/charlielidbury/Zotero/storage/GCSG949Y/tiobe-index.html}
 }
 
 @article{turingComputableNumbersApplication1937,
@@ -566,4 +645,23 @@
   url = {https://lcamtuf.coredump.cx/afl/technical_details.txt},
   urldate = {2024-01-31},
   file = {/Users/charlielidbury/Zotero/storage/99KAJ4D6/technical_details.html}
+}
+
+@inproceedings{zinzindohoueHACLVerifiedModern2017,
+  title = {{{HACL}}*: {{A Verified Modern Cryptographic Library}}},
+  shorttitle = {{{HACL}}*},
+  booktitle = {Proceedings of the 2017 {{ACM SIGSAC Conference}} on {{Computer}} and {{Communications Security}}},
+  author = {Zinzindohou{\'e}, Jean-Karim and Bhargavan, Karthikeyan and Protzenko, Jonathan and Beurdouche, Benjamin},
+  year = {2017},
+  month = oct,
+  pages = {1789--1806},
+  publisher = {ACM},
+  address = {Dallas Texas USA},
+  doi = {10.1145/3133956.3134043},
+  url = {https://dl.acm.org/doi/10.1145/3133956.3134043},
+  urldate = {2024-06-17},
+  abstract = {HACL{$\ast$} is a verified portable C cryptographic library that implements modern cryptographic primitives such as the ChaCha20 and Salsa20 encryption algorithms, Poly1305 and HMAC message authentication, SHA-256 and SHA-512 hash functions, the Curve25519 elliptic curve, and Ed25519 signatures. HACL{$\ast$} is written in the F{$\ast$} programming language and then compiled to readable C code. The F{$\ast$} source code for each cryptographic primitive is verified for memory safety, mitigations against timing side-channels, and functional correctness with respect to a succinct high-level specification of the primitive derived from its published standard. The translation from F{$\ast$} to C preserves these properties and the generated C code can itself be compiled via the CompCert verified C compiler or mainstream compilers like GCC or CLANG. When compiled with GCC on 64-bit platforms, our primitives are as fast as the fastest pure C implementations in OpenSSL and Libsodium, significantly faster than the reference C code in TweetNaCl, and between 1.1x-5.7x slower than the fastest hand-optimized vectorized assembly code in SUPERCOP.},
+  isbn = {978-1-4503-4946-8},
+  langid = {english},
+  file = {/Users/charlielidbury/Zotero/storage/WX47WYFS/Zinzindohoué et al. - 2017 - HACL A Verified Modern Cryptographic Library.pdf}
 }
