--- a/report/thesis/includes.tex
+++ b/report/thesis/includes.tex
@@ -49,6 +49,7 @@
 \graphicspath{ {./figures/} }
 \usepackage{tikz,lipsum,lmodern}
 \usepackage[most]{tcolorbox}
+\usepackage{xcolor}
 \tcbuselibrary{theorems, breakable, skins, raster}
 \newtcbtheorem[number within=section]{Definition}{Def.}%
     {
